<resources>
    <string name="app_name">CL02_T5AB_CASASQUISPE_MARILYN</string>

    <string name="titulo_principal">Almacenes Cueva</string>
    <string name="titulo_detalle">Producto</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="codigo">Código</string>
    <string name="nombre">Nombre</string>
    <string name="cantidad">Cantidad</string>

    <string name="agregar">Agregar</string>
    <string name="actualizar">Actualizar</string>
    <string name="eliminar">Eliminar</string>

    <string name="error_campo_requerido">Campo obligatorio</string>
</resources>